--- a/styles.css
+++ b/styles.css
@@ -59,12 +59,14 @@
   width: 20px;
   display: block;
 }
+
 .header .navbar-line2 {
   background-color: var(--color-white);
   height: var(--nav-line-height);
   width: 13px;
   display: block;
 }
+
 .header .navbar-line3 {
   background-color: var(--color-white);
   height: var(--nav-line-height);
@@ -114,6 +116,7 @@
 .hero {
   margin-top: 155px;
 }
+
 .hero h1 {
   font-size: 120px;
 }
@@ -139,6 +142,7 @@
   margin-top: 168px;
   margin-bottom: 0;
 }
+
 .hero-learn span {
   color: var(--main-color);
 }
@@ -160,12 +164,14 @@
   font-style: italic;
   line-height: 24px;
 }
+
 .pros {
   padding-top: 87px;
   padding-bottom: 98px;
 }
 
 @media screen and (max-width: 767px) {
+
   .pro1,
   .pro2 {
     padding-bottom: 58px;
@@ -189,9 +195,26 @@
 /* Quotes Section  */
 
 .quotes {
-  height: 392px;
-  background-color: var(--main-color);
+  margin-top: 0;
+  padding: 0;
 }
+
+.quotes-section {
+  margin-top: 0 !important;
+  /* Force removal of any top margin */
+  padding-top: 0;
+  /* Remove any top padding if necessary */
+  background-color: rgb(194, 113, 255);
+  /* Background color if needed */
+}
+
+/* Reset margin/padding for inner elements */
+.quotes-section * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 
 .quotes .carousel-item img {
   width: 160px;
@@ -217,6 +240,7 @@
 .quote-text h4 {
   font-size: 22px;
 }
+
 .quote-text span {
   font-style: italic;
   font-size: 22px;
@@ -235,10 +259,13 @@
   padding-left: var(--quotes-arrows-pad);
 }
 
+/* Media Queries */
+
 @media screen and (max-width: 991px) {
   .quotes .carousel-item img {
     margin-left: 80px;
   }
+
   .quote-text {
     padding-left: 43px;
   }
@@ -255,13 +282,19 @@
     --arrow-move-y: 40%;
     --arrow-move-x: 13px;
   }
+
   .quotes {
     height: auto;
+    margin-top: 0 !important;
+    /* Ensure no top margin */
   }
+
   .quotes .carousel-item img {
-    margin: 90px auto 0 auto;
+    margin: 0 auto;
+    /* Adjust image margin */
     padding-bottom: 10px;
   }
+
   .quotes .carousel-item .quote-text {
     padding-bottom: 103px;
   }
@@ -281,6 +314,7 @@
     padding-top: 24px;
   }
 }
+
 
 /* POPULAR SECTION  */
 
@@ -308,6 +342,7 @@
   /* top: 25px; */
   top: 5%;
 }
+
 .section .card-title {
   font-size: 16px;
   line-height: 20px;
@@ -336,6 +371,7 @@
   :root {
     --popular-arrows-x: -4vw;
   }
+
   .section .card {
     width: 19vw;
   }
@@ -345,10 +381,12 @@
   :root {
     --popular-arrows-x: -3vw;
   }
+
   .section .card-img-overlay {
     /* top: 25px; */
     top: 4%;
   }
+
   .section .card-img-overlay img {
     width: 35%;
   }
@@ -362,9 +400,11 @@
   .section .card {
     width: 16rem;
   }
+
   .section .card-img-overlay img {
     width: 30%;
   }
+
   .section .card-img-overlay {
     /* top: 25px; */
     top: 5%;
@@ -375,6 +415,7 @@
   :root {
     --popular-arrows-x: -6vw;
   }
+
   .section .card {
     width: 16rem;
   }
@@ -384,9 +425,11 @@
   :root {
     --popular-arrows-x: -15px;
   }
+
   .section .card-img-overlay img {
     width: 30%;
   }
+
   .section .card-img-overlay {
     /* top: 25px; */
     top: 5%;
@@ -419,6 +462,7 @@
   margin-left: var(--smile-p-margin);
   margin-right: var(--smile-p-margin);
 }
+
 .smiles .row {
   padding-bottom: 85px;
 }
@@ -432,10 +476,12 @@
     --smile-p-margin: 5vw;
     --smile-padding: 60px;
   }
+
   .smile1,
   .smile2 {
     padding-bottom: 58px;
   }
+
   .row .smile1,
   .row .smile2,
   .row .smile3,
@@ -448,6 +494,7 @@
   .row .smile3 {
     padding-left: var(--smile-padding);
   }
+
   .row .smile2,
   .row .smile4 {
     padding-right: var(--smile-padding);
@@ -459,6 +506,7 @@
     --smile-p-margin: 20vw;
     --smile-padding: 0;
   }
+
   .smile1,
   .smile2,
   .smile3 {
@@ -472,6 +520,7 @@
   background-color: var(--background-color);
   height: 249px;
 }
+
 .footer .container {
   height: 100%;
 }
@@ -487,6 +536,7 @@
 .footer .social-item {
   font-size: 30px;
 }
+
 .footer .social-item a {
   color: var(--color-white);
   text-decoration: none;
@@ -511,19 +561,24 @@
   .footer {
     height: auto;
   }
+
   .footer .row {
     height: auto;
   }
+
   .footer .trademark {
     padding-bottom: 0;
   }
+
   .footer .row {
     padding-top: 50px;
     padding-bottom: 34px;
   }
+
   .footer .social.nav {
     padding: 0px;
   }
+
   .footer .social {
     padding: 45px 0;
   }
@@ -557,6 +612,7 @@
 .pricing-header .hero .smile-fig {
   max-width: 37px;
 }
+
 .pricing-header .title-fig {
   width: 200px;
 }
@@ -565,9 +621,11 @@
   .pricing-header h1 {
     font-size: 24px;
   }
+
   .pricing-header .hero .smile-fig {
     max-width: 30px;
   }
+
   .pricing-header .title-fig {
     width: 150px;
   }
@@ -637,18 +695,22 @@
   .prices-grid .table {
     table-layout: initial;
   }
+
   .prices-grid .pricing-table-title-1,
   .prices-grid .pricing-table-title-2 {
     font-size: 12px;
     padding: 0;
     padding-bottom: 30px;
   }
+
   .prices-grid .prices-col-1 {
     padding-right: 30px;
   }
+
   .prices-grid .prices-col-2 {
     padding-right: 50px;
   }
+
   .prices-grid .pricing-table-title-1 {
     padding-right: 36px;
   }
@@ -702,6 +764,7 @@
 }
 
 @media screen and (max-width: 575px) {
+
   .faq .section-body .col1,
   .faq .section-body .col2 {
     padding: 0 4vw;
@@ -828,6 +891,7 @@
   font-weight: 300;
   font-size: 23px;
 }
+
 .search .dropdown .btn:after {
   color: var(--color-white);
   right: 12px;
@@ -881,11 +945,12 @@
   .results .card-img-overlay {
     top: 1vh;
   }
+
   .results .rating img {
     width: 12px;
   }
 
-  .results .rating + span {
+  .results .rating+span {
     display: block;
     padding-top: 30px;
   }
@@ -899,4 +964,60 @@
   .results .card {
     width: 90vw;
   }
+}
+
+
+
+
+/* CAROUSEL AND SPINNER CSS EDITS */
+
+
+
+#quotes-carousel .carousel-item {
+  background-color: rgb(194 113 255);
+  padding: 90px;
+  border-radius: 10px;
+}
+
+#quotes-carousel .carousel-item .d-flex {
+  width: 60%;
+  /* Ensure the flex container takes up the full width */
+}
+
+#quotes-carousel img.rounded-circle {
+  margin-right: 30px;
+  /* Space between image and text */
+}
+
+#quotes-carousel .carousel-item div {
+  text-align: left;
+  /* Ensure text is aligned to the left of the div */
+  color: white;
+  /* Set text color to contrast with purple background */
+}
+
+#quotes-carousel .carousel-item p {
+  margin-bottom: 5px;
+  /* Adjust spacing between text elements */
+}
+
+/* Add this to your styles.css */
+.quotes-section {
+  position: relative;
+}
+
+#quotes-loader {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+  color: #fcfcfc;
+  animation-duration: 0.1ms;
+}
+
+#quotes-loader .spinner-border {
+  width: 3rem;
+  height: 3rem;
+  border-width: 0.4rem;
 }
